// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for Contribution With billingPeriod Annual renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    We will attempt to take payment of 
    £0
    ,
     
    on the first day of March every year
    , from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time.
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for Contribution With billingPeriod Monthly renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    We will attempt to take payment of 
    £0
    ,
     
    on the first day of every month
    , from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time.
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for DigitalSubscription With billingPeriod Monthly renders correctly 1`] = `<div />`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for GuardianAdLite With billingPeriod Annual renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    Guardian Ad-Lite
     subscription
     will auto-renew each
     
    year
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for GuardianAdLite With billingPeriod Monthly renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    Guardian Ad-Lite
     subscription
     will auto-renew each
     
    month
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for OneTimeContribution With billingPeriod Monthly renders correctly 1`] = `<div />`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for SupporterPlus With billingPeriod Annual renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    All-access digital
     subscription and any contribution will auto-renew each 
    year
    . You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for SupporterPlus With billingPeriod Monthly renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    All-access digital
     subscription and any contribution will auto-renew each 
    month
    . You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for TierThree With billingPeriod Annual renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    Digital + print
     subscription
    s
     will auto-renew each
     
    year
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for TierThree With billingPeriod Monthly renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    Digital + print
     subscription
    s
     will auto-renew each
     
    month
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
